fix: display route selector text over black background for increased readability

--- a/scoreboard/assets/style.css
+++ b/scoreboard/assets/style.css
@@ -122,19 +122,23 @@ th, td {
 }
 
 #routeSelector h2 {
-    bottom: 90px;
-    right: 36px;
+    bottom: 92px;
+    right: 40px;
     position: absolute;
     text-transform: uppercase;
-    font-size: 1.3em;
+    font-size: 1.2em;
+    background: #00000070;
+    padding: 6px 12px;
 }
 
 #routeSelector h3 {
-    bottom: 76px;
-    right: 36px;
+    bottom: 72px;
+    right: 30px;
     position: absolute;
     text-transform: uppercase;
     font-size: 0.9em;
+    background: #00000070;
+    padding: 6px 12px;
 }
 
 #imageTrigger {
